--- a/org/2020-02-04-win10.org
+++ b/org/2020-02-04-win10.org
@@ -1,4 +1,4 @@
-#+TITLE: win10 shortcut
+#+TITLE: win10 related
 #+STARTUP: indent
 * keyboard shortcut
 - ctrl + z undo
@@ -6,3 +6,5 @@
 - ctrl + x cut
 - alt
 * gesture shortcut
+* 锯齿消除
+选中对应程序，右键属刑->兼容性->更改高dpi设置->勾选替代高dpi缩放为...
