--- a/org/2020-02-09-proxy.org
+++ b/org/2020-02-09-proxy.org
@@ -7,3 +7,5 @@
 *** shadowsocks-libev
     ss-local -s ck-7.forever-over.gq -p 20039 -l 1080 -k apBPAP123 -m chacha20-ietf
 *** proxychains
+*** vpn-tether
+手机开启ssr共享给电脑
