add spring security and fastdfs usage

--- a/org/2019-10-31-Vuejs.org
+++ b/org/2019-10-31-Vuejs.org
@@ -905,3 +905,6 @@ var vm = new Vue({
 webpack configuration file:
 such as
 C:\Users\86158\IdeaProjects\charging-mng\node_modules\@vue\cli-service\webpack.config.js
+* scss
+npm install sass-loader node-sass vue-style-loader -D
+无需配置
