--- a/org/2019-10-31-Vuejs.org
+++ b/org/2019-10-31-Vuejs.org
@@ -908,3 +908,6 @@ C:\Users\86158\IdeaProjects\charging-mng\node_modules\@vue\cli-service\webpack.c
 * scss
 npm install sass-loader node-sass vue-style-loader -D
 无需配置
+* trick
+** 解析传递数据时造出的undefined
+父组件传递的prop的在子组件初始化时，需要用到，由于传递延迟，可以导致undefined，可以对子组件必须的prop属性同时以v-if控制
