--- a/org/2019-11-11-java.org
+++ b/org/2019-11-11-java.org
@@ -66,6 +66,25 @@ str在本字符串首次出现的位置，没有则返回-1
 **** @SuppressWarnings
 **** @SafeVarargs
 **** @FunctionInterface
+** regex
+*** pattern
+#+BEGIN_SRC java
+// 单纯的匹配是否存在
+String str = "(a)";
+String pattern = "[(a)]{3}";
+boolean matches = Pattern.matches(pattern, str);
+System.out.println(matches);
+
+String str = "(a)";
+String pattern = "\\(a\\)";
+// []内部的符号自动被转义，相当于原本需要\\(现在不需要\\
+String pattern2 = "[(a)]{3}";
+Pattern compile = Pattern.compile(pattern);
+Matcher matcher = compile.matcher(str);
+if (matcher.find()){
+    System.out.println(matcher.group(0));
+}
+#+END_SRC
 * jdk8
 ** Lambda表达式
 基本结构：
