--- a/org/2020-02-12-python.org
+++ b/org/2020-02-12-python.org
@@ -87,6 +87,9 @@ for i in range(0, 10, 3) :
 a = ['Google', 'Baidu', 'Runoob', 'Taobao', 'QQ']
 for i in range(len(a)):
     print(i, a[i])
+
+
+for index,url in enumerate(urls)
 '''
 0 Google
 1 Baidu
