--- a/org/2020-02-15-scrapy.org
+++ b/org/2020-02-15-scrapy.org
@@ -105,7 +105,9 @@ DOWNLOADER_MIDDLEWARES = {
 * debug
 ** pycharm
 从scrapy模块复制cmdline.py到scrapy.cfg同目录(venv的位置在venv/Lib/site-packages/scrapy/cmdline.py)，配置对应py脚本的启动脚本为cmdline.py，参数使用crawl [spiderName]
-* eg
+* #+begin_example
+
+#+end_exampleg
 scrapy startproject projectName
 scrapy genspider [spiderName] [allowDomain]
 scrapy genspider -t crawl [spiderName] [allowDomain] #生成crawlspider
