--- a/org/2020-03-07-fastdfs.org
+++ b/org/2020-03-07-fastdfs.org
@@ -12,7 +12,7 @@ cd fastdfs; git checkout V6.06
 ./make.sh clean && ./make.sh && ./make.sh install
 ./setup.sh /etc/fdfs
 
-edit config file via needing(storage不能指定tracker ip为127.0.0.1)
+edit config file via needing(storage不能指定tracker ip为127.0.0.1, 如果为同一台机子使用tracker与storage，需要考虑内网地址与开发环境的影响，比如storage配置tracker时，使用内网地址，服务器自身可以读取，但是开发环境通过trackclient获取到的ip地址也是内网，但是不能正常上传)
 
 /usr/bin/fdfs_trackerd /etc/fdfs/tracker.conf restart
 /usr/bin/fdfs_storaged /etc/fdfs/storage.conf restart
@@ -48,4 +48,7 @@ cp /root/fastdfs-nginx-module/src/mod_fastdfs.conf /etc/fdfs/
 edit /etc/fdfs/mod_fastdfs.conf
 
 /usr/local/nginx/sbin/nginx
-
+* client
+** java
+由于作者没有发布出去，因此需要编译后，进行安装
+ref https://github.com/happyfish100/fastdfs-client-java
