--- a/org/2020-05-22-japanese.org
+++ b/org/2020-05-22-japanese.org
@@ -11,3 +11,239 @@
 ** 罗马字
 类似于中文拼音的英文标注，用于输入法等用途
 * grammer
+** sentence
+*** 肯定句
+noun　は　noun です  => noun is noun
+です=>でした(过去式)
+*** 否定句
+noun　は　noun ではありません => noun is not noun
+ではありません=>ではありません でした(过去式)
+*** 疑问句
+noun は　noun ですか => Is noun is noun?
+*** の
+noun の noun => noun's noun
+搭话: あのう
+*** 存在句
+location に　noun あります(物)/います(人/动物) => there is noun in location
+noun　は　location に　あります/います => there is noun in location
+*** 疑问词 
+疑问词 も 动词(否定)
+eg:
+教室　に　だれ　も　いません
+冷蔵庫　に　何　も　あぃません
+*** 时间
+今 ~時　~分　です => 现在几点几分
+noun　は time に verb
+noun は 时间1　かち 时间2　まで　verb => noun从时间1到时间2干什么
+(noun　は)　いつ verb => 问非指定性时间　
+(noun は)　何時に verb => 问具体时间
+*** は(对比)
+小野さん　は 今日　は　休みます
+*** 地点句型
+location へ(强调方向)　verb
+location から(从) verb
+noun と verb
+location から location まで verb => 从A地点到B地点
+*** 交通工具 で(坐) verb
+*** location で　verb
+李さん　は　図書館　で　勉強します　=> 李先生在图书馆学习
+*** 做什么
+nour を　verb
+eg:
+李さん　は　毎日コーヒー を　飲みます => 李先生昨天喝了咖啡
+*** noun で verb
+noun在这里表手段/工具
+eg:
+李さん　は　日本語　で　手紙　を　書きます => 李先生用日语写信
+*** 借给/借入
+也可以指代抽象获得，如向某人学习等行为
+owner は receiver　に something を　
+あげます => 借给
+弟　は　小野さん　花　を　あげます => 母亲给了小野花
+母　は　中島さん　に　ワイン　を　あげました　(过去式)
+
+receiver は owner　に something　を
+もらいました
+私　は　小野さん　に　辞書　を　もらいました => 我从小野借了字典 
+*** 见某人
+person1 に　会います
+李さん　は　明日　中島さん　に　会います => 李先生明天见中岛先生
+*** 形容词
+一类形直接加名词
+二类结尾的た改な在接名词
+** word
+*** 人称
+**** 第一人称
+normal: 私(わたし)
+male:　僕(ぼく)/俺(おれ)
+femal:　あたし
+**** 第二人称
+正式且暧昧的说法(不能常用): あなた
+通用(同辈): 君(きみ)
+同级(死党/闺蜜): お前(おまえ)
+陌生(走路被撞之类): あんた
+**** 第三人称
+male: 彼(かれ)
+famale:　彼女(かのじよ)
+*** 代词
+**** noun
+***** 物品代词，为这个/那个类似的意义
+由近及远, 类似于英文中his/mine性质，只能作为noun使用
+くれ
+それ
+あれ
+***** 地点代词，这里/那里类似的意义
+由近及远
+| 一般   | 礼貌   |
+|--------+--------|
+| ここ   | こちら |
+| そこ   | そちら |
+| あそこ | あちら |
+一般用语的疑问词为 どこ
+礼貌用语的疑问词为 どちら
+**** adj
+同上，但是作为adj使用
+くの
+その
+あの
+*** 疑问代词
+**** who
+普通: 誰(だれ)
+礼貌: どなた
+尊敬: どちら様(さま)
+**** what
+何(なん)
+
+どんな
+eg:
+横浜　は　どんな町ですか　=> 横滨是怎么样的城市呢
+
+どうですか 意思为怎么样呢，置于句尾，表对某事物的判断
+**** which
+どれ/どの
+*** number
+单纯计数用的是第一个读音，第二个读音的变化通用用在诸如第几时等其他情形，4两者都不符合
+4/7/9的读音变化会影响到组合后的数字读音，在可用于非计数场景的情况下,
+300,600/800的ひ会变成び, ぴ
+|  value | pronunciation |
+|--------+---------------|
+|      0 | ゼロ          |
+|      1 | いち          |
+|      2 | に            |
+|      3 | さん          |
+|      4 | よん/し       |
+|      5 | ご            |
+|      6 | ろく          |
+|      7 | なな/しち     |
+|      8 | はち          |
+|      9 | きよう/く     |
+|     10 | じよう        |
+|     11 | じよういち    |
+|     12 | じように      |
+|    ... |               |
+|     20 | にじよう      |
+|     30 | さんじよう    |
+|    100 | ひやく        |
+|    200 | にひやく      |
+|    300 | さんびやく    |
+|    600 | ろくぴやく    |
+|   1000 | せん          |
+|  10000 | いちまん      |
+| 100000 | じゆうまん    |
+|   百万 | ひやくまん    |
+|   千万 | せんまん      |
+|     亿 | おく          |
+|     兆 | ちよう        |
+|    101 | ひやくいち    |
+*** time
+**** day of the week
+尾部为 曜日(ようび)
+提问为　何曜日
+| 前缀 | 星期几 |
+|------+--------|
+| 日   | にち   |
+| 月   | げつ   |
+| 火   | か     |
+| 水   | す     |
+| 木   | もく   |
+| 金   | きん   |
+| 土   | ど     |
+**** 时
+读音基本都是数字读音+时
+7和9是用数字第二个读音
+4时读音为よじ，
+0时 れいじ
+何时 なんじ
+**** 分
+1,3,4,6,8,10读ぷん, 超过10个一样看位数或者是否整数确定读法, 其他读ふん
+~时30分可以换为~时半
+何分 なんぷん
+**** 时间频率
+*** 变形
+**** 动词
+| 时态      |        | 肯定   | 否定         |
+|-----------+--------+--------+--------------|
+| 现在/未来 | 礼貌体 | ます   | ません       |
+|           | 简体   | 原型   | ない形       |
+|-----------+--------+--------+--------------|
+| 过去      | 礼貌体 | ました | ませんですた |
+|           | 简体   | た形   | ~なかつた    |
+|-----------+--------+--------+--------------|
+**** 名词
+| 时态      |        | 肯定   | 否定                 |
+|-----------+--------+--------+----------------------|
+| 现在/将来 | 礼貌体 | です   | ではありません       |
+|           | 简体   | だ     | じよない             |
+|-----------+--------+--------+----------------------|
+| 过去      | 礼貌体 | でした | ではありませんでした |
+|           | 简体   | だつた | じやなかつた         |
+|-----------+--------+--------+----------------------|
+**** 动词类型
+|        | 条件                    | 变形规则                      |
+|--------+-------------------------+-------------------------------|
+| 第一类 | 词尾在う段              | 词尾变为第二段+动词的变形规则 |
+|--------+-------------------------+-------------------------------|
+| 第二类 | 词尾为る且前一个为2/4段 | 去掉词尾+动词变形规则         |
+|--------+-------------------------+-------------------------------|
+| 第三类 | する                    | します                        |
+|        | 来る(くる)              | 来ます(きます)                |
+|--------+-------------------------+-------------------------------|
+**** 形容词
+***** 一类
+いい/よい 都是表示好的意思，但是变形使用只能拿第二个来进行变形
+|           | 肯定    | 否定        |
+| 现在/将来 | ~い     | ~くない     |
+| 过去      | ~かつた | ~くなかつた |
+***** 二类
+变化时去掉尾部+名词的变形串
+*** と
+noun と noun => noun and noun
+*** か
+noun or noun
+*** よ
+提醒，表强调
+私　は　毎日　アイスクリーム　を　食べます
+太りますよ
+*** 副词
+**** 转折
+でも　=> 但是
+ところで => 话说
+**** 累加
+さして => 而且
+** 省略做法
+*** 主语省略
+根据语境省掉主语，类似于中文
+ (あなたは) 吉田さんですか
+*** 谓语省略
+(これは)　いくちですか？ 省略了主语的情况下，如果该句问了很多次
+あれは　(いくちですか)？ 谓语根据语境整个消掉了
+* input
+** romaji input
+输入对应的罗马音，输入促音有特殊的输入方式
+** kana input
+1. 每个键位都有对应的键位
+2. 存在英文键盘对应的输入位置以及完全日本定制的键盘
+3. 对于を的英文键盘输入需要shift+0才可以输入出来
+** ref 
+[[https://nihongoperapera.com/typing-in-japanese/windows-keyboard-shortcuts.html][切换用的快捷键]]
+[[http://o-oo.net.cn/keyboard/][在线键盘]]
